Changed barcode type to EAN13

--- a/Barcode_24.jrxml
+++ b/Barcode_24.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.3.1.final using JasperReports Library version 6.3.1  -->
-<!-- 2017-10-10T11:12:43 -->
+<!-- 2017-10-18T17:33:35 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="65_Barcodes" columnCount="3" printOrder="Horizontal" pageWidth="595" pageHeight="842" columnWidth="182" columnSpacing="3" leftMargin="19" rightMargin="19" topMargin="36" bottomMargin="36" uuid="4d6ffc55-4d9c-4f44-8816-918135fa0001">
 	<property name="com.jaspersoft.studio.unit." value="mm"/>
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="BarcodeCSVDatasource.xml"/>
@@ -49,7 +49,7 @@
 			</textField>
 			<componentElement>
 				<reportElement style="Style1" positionType="Float" x="6" y="33" width="169" height="30" uuid="cba159e6-fa95-47ef-afa6-cbad2ee75986"/>
-				<jr:barbecue xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd" type="2of7" drawText="true" checksumRequired="false">
+				<jr:barbecue xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd" type="EAN13" drawText="true" checksumRequired="false">
 					<jr:codeExpression><![CDATA[$F{Barcode}]]></jr:codeExpression>
 				</jr:barbecue>
 			</componentElement>
