--- a/Barcode_40.jrxml
+++ b/Barcode_40.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.3.1.final using JasperReports Library version 6.3.1  -->
-<!-- 2017-12-03T13:23:03 -->
+<!-- 2017-12-25T20:15:47 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="40_Barcodes" columnCount="5" printOrder="Horizontal" pageWidth="595" pageHeight="842" columnWidth="111" columnSpacing="3" leftMargin="12" rightMargin="12" topMargin="8" bottomMargin="8" uuid="4d6ffc55-4d9c-4f44-8816-918135fa0001">
 	<property name="com.jaspersoft.studio.unit." value="mm"/>
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="BarcodeCSVDatasource.xml"/>
@@ -19,28 +19,36 @@
 		<band height="103">
 			<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.FreeLayout"/>
 			<textField>
-				<reportElement x="1" y="28" width="109" height="12" uuid="74c115ae-d04f-4107-878e-81c7e2407c9c"/>
+				<reportElement x="1" y="28" width="109" height="12" uuid="74c115ae-d04f-4107-878e-81c7e2407c9c">
+					<printWhenExpression><![CDATA[$F{ProductName}!=""]]></printWhenExpression>
+				</reportElement>
 				<textElement textAlignment="Center">
 					<font size="8"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{ProductName}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="1" y="74" width="109" height="14" uuid="da5f429b-13d7-4763-8335-edea59f99f85"/>
+				<reportElement x="1" y="74" width="109" height="14" uuid="da5f429b-13d7-4763-8335-edea59f99f85">
+					<printWhenExpression><![CDATA[$F{ProductName}!=""]]></printWhenExpression>
+				</reportElement>
 				<textElement textAlignment="Center">
 					<font size="8" isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA["MRP : "+$F{Price}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="1" y="11" width="109" height="16" uuid="4d8fbe84-a9a7-44b4-a90b-d98e883c7123"/>
+				<reportElement x="1" y="11" width="109" height="16" uuid="4d8fbe84-a9a7-44b4-a90b-d98e883c7123">
+					<printWhenExpression><![CDATA[$F{ProductName}!=""]]></printWhenExpression>
+				</reportElement>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="8" isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{StoreName}]]></textFieldExpression>
 			</textField>
 			<componentElement>
-				<reportElement style="Style1" positionType="Float" x="1" y="42" width="109" height="30" uuid="cba159e6-fa95-47ef-afa6-cbad2ee75986"/>
+				<reportElement style="Style1" positionType="Float" x="1" y="42" width="109" height="30" uuid="cba159e6-fa95-47ef-afa6-cbad2ee75986">
+					<printWhenExpression><![CDATA[$F{ProductName}!=""]]></printWhenExpression>
+				</reportElement>
 				<jr:barbecue xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd" type="EAN13" drawText="true" checksumRequired="false">
 					<jr:codeExpression><![CDATA[$F{Barcode}]]></jr:codeExpression>
 				</jr:barbecue>
